[package]
name = "rust-patterns"
version = "0.0.0"
authors = ["Alexander Smoktal <cosm.ua@gmail.com>"]
license = "MIT"

[dependencies]
lazy_static = "0.2.10"

# Creational
[[bin]]
name = "abstract_factory"
path = "src/creational/abstract_factory.rs"

[[bin]]
name = "builder"
path = "src/creational/builder.rs"

[[bin]]
name = "factory_method"
path = "src/creational/factory_method.rs"

[[bin]]
name = "prototype"
path = "src/creational/prototype.rs"

[[bin]]
name = "singleton"
path = "src/creational/singleton.rs"

# Structural
[[bin]]
name = "adapter"
path = "src/structural/adapter.rs"

[[bin]]
name = "bridge"
path = "src/structural/bridge.rs"